--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
     </dependency>
     <dependency>
       <groupId>org.citrusframework</groupId>
+      <artifactId>citrus-catalog-schema</artifactId>
+      <version>${citrus.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.citrusframework</groupId>
       <artifactId>citrus-xml</artifactId>
     </dependency>
     <dependency>
@@ -317,6 +322,7 @@
           <appendAssemblyId>false</appendAssemblyId>
           <descriptors>
             <descriptor>src/main/assembly/citrus-schemas.xml</descriptor>
+            <descriptor>src/main/assembly/copy-schemas.xml</descriptor>
           </descriptors>
           <attach>false</attach>
         </configuration>
@@ -395,6 +401,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
+          <outputDirectory>${project.build.directory}</outputDirectory>
           <escapeString>\</escapeString>
         </configuration>
         <executions>
@@ -444,6 +451,24 @@
                   <directory>${project.build.directory}/schemas/org/citrusframework/schema</directory>
                   <includes>
                     <include>citrus-testcase*.xsd</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>copy-citrus-json-test-schemas</id>
+            <phase>package</phase>
+            <configuration>
+              <outputDirectory>${project.build.directory}/site/_site/schema/json/testcase</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}/schemas/org/citrusframework/schema/citrus</directory>
+                  <includes>
+                    <include>citrus-testcase*.json</include>
                   </includes>
                 </resource>
               </resources>
